# pdf-cleanup-empty

./: README.md  pyproject.toml
.github/workflows/: build.yaml
src/pdf_cleanup_empty/: cli.py
